<resources>
    <string name="app_name">ParkingAuthorityTicketingSystem</string>
    <string name="app_name_spaces">Parking Authority Ticketing System</string>
    <string name="createShiftlog_title">Create Shiftlog</string>
    <string name="mapview_title">MapView</string>
    <string name="shiftloglistview_title">View Shiftlogs - List View</string>
    <string name="plateNumber">Plate Number:</string>
    <string name="state">State:</string>
    <string name="maxTime">Max Time:</string>
    <string name="minutes">minutes</string>
    <string name="meternumber">Meter Num:</string>
    <string name="streetnum">Street Num:</string>
    <string name="street">Street:</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="recententries">Recent Entries</string>
    <string name="swipeHint">   Swipe left to delete</string>
    <string name="delete">DELETE</string>
    <string name="remove">Remove</string>
    <string name="ticket">Ticket</string>
    <string name="title_plate">Plate</string>
    <string name="title_state">State</string>
    <string name="title_street">Street</string>
    <string name="title_timeLeft">Time Left</string>
    <string name="input_num_character">1234567890ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz</string>

    <string name="First_list">Tap street name to view logged vehicles.</string>
    <string name="Second_list">Tap to view details. Swipe to delete.</string>


    <string name="location_settings_inadequate_warning">The location settings on the device are not
        adequate to run this sample. Fix in Settings.</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>


    <array name="states_array">
        <item>New Jersey</item>
        <item>Alabama</item>
        <item>Alaska</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>District of Columbia</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <!--<item>New Jersey</item>-->
        <item>New Mexico</item>
        <item>New York</item>
        <item>New York City</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
    </array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
