<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="@drawable/title_background"
        android:weightSum="1">
        <ImageView
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/title_height"
            android:src="@drawable/ic_contract"
            android:layout_weight="0.11" />
        <TextView
            android:id="@+id/title_left"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="@dimen/title_text_size"
            android:text="@string/createShiftlog_title"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            />
    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/length_height"
        android:layout_marginLeft="@dimen/space"
        android:orientation="horizontal"
        android:background="@color/colorAccent"
        android:layout_marginBottom="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            >

            <TextView

                android:textColor="@color/colorText"
                android:layout_width="@dimen/space_xl"
                android:layout_height="match_parent"
                android:text="@string/plateNumber"
                android:gravity="right"
                />
            <EditText
                android:id="@+id/plateNum_et"
                android:layout_width="@dimen/space_xxl"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_border"
                android:layout_marginLeft="5dp"
                android:paddingLeft="6dp"
                android:hint="7-8letters"
                android:textColorHint="@color/colorAccent"
                android:gravity="left"
                android:maxLength="9"
                android:digits="@string/input_num_character"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/space">

            <TextView
                android:layout_width="@dimen/space_xl"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/space"
                android:textColor="@color/colorText"
                android:text="@string/state"
                android:gravity="right"

                />

            <Spinner
                android:id="@+id/state_spinner"
                android:layout_width="@dimen/space_xxl"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:entries="@array/states_array"
                android:spinnerMode="dialog"
                android:background="@drawable/edittext_border"

                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space">
            <TextView
                android:layout_width="@dimen/space_xl"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/space"
                android:text="@string/maxTime"
                android:gravity="right"
                android:textColor="@color/colorText"/>

            <EditText
                android:id="@+id/max_time_et"
                android:layout_width="@dimen/space_large"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_border"
                android:maxLength="3"
                android:inputType="number"
                android:digits="1234567890"
                android:layout_marginLeft="5dp"
                android:paddingLeft="6dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/space"
                android:text="@string/minutes"
                android:textColor="@color/colorAccent"/>
            <!--<Button-->
                <!--android:id="@+id/listView_btn"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="L"-->
                <!--android:minHeight="0dp"-->
                <!--/>-->
        </LinearLayout>
        <View
            android:layout_width="@dimen/space_xxl"
            android:layout_marginTop="@dimen/space"
            android:layout_height="@dimen/length_height"
            android:layout_marginLeft="@dimen/space_xl"
            android:background="@color/colorAccent" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space">

            <TextView
                android:layout_width="@dimen/space_xl"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/meternumber"
                android:textColor="@color/colorText"/>

            <EditText
                android:id="@+id/meterNum_et"
                android:layout_width="@dimen/space_xl"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_border"
                android:maxLength="7"
                android:layout_marginLeft="5dp"
                android:paddingLeft="6dp"
                android:digits="@string/input_num_character" />
            <!--<TextView-->
                <!--android:id="@+id/coordinates_txt"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:text="Coordinates"-->
                <!--/>-->
            <!--<Button-->
                <!--android:id="@+id/viewshiftlog_btn"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text=">"-->
                <!--android:minHeight="0dp"-->
                <!--/>-->
            <ProgressBar
                android:id="@+id/progressBar"
                android:visibility="gone"
                android:indeterminate="true"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space">

            <TextView
                android:layout_width="@dimen/space_xl"
                android:layout_height="wrap_content"
                android:text="@string/streetnum"
                android:gravity="right"
                android:textColor="@color/colorText"/>

            <EditText
                android:id="@+id/streetNum_et"
                android:layout_width="@dimen/space_xl"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_border"
                android:maxLength="8"
                android:layout_marginLeft="5dp"
                android:paddingLeft="6dp"
                android:digits="@string/input_num_character"

                />

            <TextView
                android:id="@+id/coordinates"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"/>


        </LinearLayout>
        <View
            android:layout_width="@dimen/space_xxl"
            android:layout_marginTop="@dimen/space"
            android:layout_height="@dimen/length_height"
            android:layout_marginLeft="@dimen/space_xl"
            android:background="@color/colorAccent" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space"
            android:weightSum="1">

            <TextView
                android:layout_width="@dimen/space_xl"
                android:layout_height="wrap_content"
                android:text="@string/street"
                android:gravity="right"
                android:textColor="@color/colorText"/>

            <AutoCompleteTextView
                android:id="@+id/street_name"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:paddingLeft="6dp"
                android:background="@drawable/edittext_border"/>

            <!--<EditText-->
                <!--android:id="@+id/street_name"-->
                <!--android:layout_width="@dimen/space_xxl"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginLeft="5dp"-->
                <!--android:paddingLeft="6dp"-->
                <!--android:background="@drawable/edittext_border" />-->

            <ImageButton
                android:id="@+id/autolocate_button"
                android:src="@drawable/ic_map"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:padding="1dp"
                android:layout_marginLeft="5dp"/>

            <!--<CheckBox-->
                <!--android:id="@+id/checkBox_position"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:background="@drawable/checkboxbackground"/>-->


        </LinearLayout>
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            >
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="8"
                />
            <Button
                android:id="@+id/save_btn"
                android:drawableLeft="@drawable/ic_save_white_48px"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:text="@string/save"
                android:background="?attr/selectableItemBackground"
                android:textColor="@color/colorAccent"
                android:textAllCaps="false"
                android:textStyle="bold"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                />
            <Button
                android:id="@+id/clear_btn"
                android:drawableLeft="@drawable/ic_delete_forever_black_24dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:text="@string/clear"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="8"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recententries"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginLeft="@dimen/space"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/swipeHint"
                android:textColor="@color/colorHint"
                android:layout_marginLeft="@dimen/space"/>
        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/length_height"
            android:layout_marginLeft="@dimen/space"
            android:layout_marginRight="@dimen/space"
            android:orientation="horizontal"
            android:background="@color/colorHint"
            android:layout_marginBottom="@dimen/space"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/recyclerView_title"
            android:orientation="horizontal"
            android:background="@drawable/recyclerview_background"
            android:weightSum="5"
            android:layout_marginLeft="@dimen/space"
            android:layout_marginRight="@dimen/space"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/title_plate"
                android:textColor="@color/colorrecyclerviewtitle"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:layout_marginLeft="@dimen/space"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/title_state"
                android:textColor="@color/colorrecyclerviewtitle"
                android:layout_weight="1"
                android:gravity="center_vertical"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/title_street"
                android:textColor="@color/colorrecyclerviewtitle"
                android:layout_weight="2.5"
                android:gravity="center_vertical"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/title_timeLeft"
                android:textColor="@color/colorrecyclerviewtitle"
                android:layout_weight="1.5"
                android:gravity="center_vertical"
                />
        </LinearLayout>
        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/refresh"
            android:layout_width="match_parent"
            android:layout_height="@dimen/recycler_height" >
            <android.support.v7.widget.RecyclerView

                android:id="@+id/recyclerView"
                android:layout_height="@dimen/recycler_height"
                android:layout_width="match_parent"
                android:layout_marginLeft="@dimen/space"
                android:layout_marginRight="@dimen/space"
                >

            </android.support.v7.widget.RecyclerView>
        </android.support.v4.widget.SwipeRefreshLayout>
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="180dp"
            >
            <Button
                android:layout_marginLeft="10dp"
                android:id="@+id/viewshiftlog_btn"
                android:drawableLeft="@drawable/ic_map2"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="View Shiftlog Map"
                android:textStyle="bold"
                android:textSize="15sp"
                android:background="?attr/selectableItemBackground"
                android:textColor="@color/colorPrimaryDark"
                android:layout_weight="1"
                android:textAllCaps="false"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>