<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/lin1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_background"
        android:weightSum="1">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_map2"
            android:layout_weight="0.11"
            android:layout_marginTop="5dp"/>
        <TextView
            android:id="@+id/title_left"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="@dimen/title_text_size"
            android:text="@string/shiftloglistview_title"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            />


    </LinearLayout>
    <LinearLayout
        android:id="@+id/lin2"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lin1">

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/length_height"
            android:layout_marginLeft="@dimen/space"
            android:orientation="horizontal"
            android:background="@color/colorAccent"
            />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/lin3"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lin2"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:textColor="@color/colorPrimary"
            android:textStyle="italic"
            android:text="@string/First_list"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/recyclerView_title"
            android:orientation="horizontal"
            android:background="@drawable/recyclerview_background"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/title_street"
                android:textColor="@color/colorrecyclerviewtitle"
                android:gravity="center_vertical"
                />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerViewa"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            >

        </android.support.v7.widget.RecyclerView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:textColor="@color/colorPrimary"
            android:textStyle="italic"
            android:text="@string/Second_list"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/recyclerView_title"
            android:orientation="horizontal"
            android:background="@drawable/recyclerview_background"
            android:weightSum="5"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/title_plate"
                android:textColor="@color/colorrecyclerviewtitle"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:layout_marginLeft="@dimen/space"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/title_state"
                android:textColor="@color/colorrecyclerviewtitle"
                android:layout_weight="1"
                android:gravity="center_vertical"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/title_street"
                android:textColor="@color/colorrecyclerviewtitle"
                android:layout_weight="2.5"
                android:gravity="center_vertical"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/title_timeLeft"
                android:textColor="@color/colorrecyclerviewtitle"
                android:layout_weight="1.5"
                android:gravity="center_vertical"
                />

        </LinearLayout>
        <android.support.v7.widget.RecyclerView

            android:id="@+id/recyclerViewb"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            >

        </android.support.v7.widget.RecyclerView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorrecyclerviewtitle"
        >

            <Button
                android:layout_marginLeft="10dp"
                android:id="@+id/viewMap_btn"
                android:drawableLeft="@drawable/ic_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:text="View Shiftlog Map"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                android:layout_weight="0.2"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />

            <ImageButton
                android:id="@+id/route_btn"
                android:layout_marginRight="@dimen/titlesize"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                android:src="@drawable/ic_route"
                />

    </LinearLayout>

</RelativeLayout>